[project]
name = "altk-main"
version = "0.1.0"
description = "Agent Lifecycle Toolkit (ALTK) documentation site"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocs-click",
    "mkdocstrings[python]",
    "griffe_inherited_docstrings",
    "griffe-pydantic",
    "mkdocs-awesome-nav",
    "mkdocs-include-markdown-plugin>=7.1.8",
    "mkdocs-enumerate-headings-plugin"
]

[tool.uv]
package = false

[tool.hatch.envs.docs.scripts]
deploy = "mkdocs gh-deploy --remote-name origin --remote-branch gh-pages"
serve  = "mkdocs serve"
